# UMP

./: .gitignore  README.md
Android/jni/: Application.mk  artinjector.bat  umpmain.cpp  umpserver.cpp  umpserver.h
memory_report_decoder/: CMakeLists.txt
memory_report_decoder/src/: Windows.cpp  Windows.h  main.cpp  umpcrawler.cpp  umpcrawler.h  umpmemory.h
release/: socket_client.py
